# python-project-template

./: LICENSE  Makefile  README.md  pyproject.toml  startproject.sh
.github/workflows/: python-package.yml
src/: parser.py  sample.py  sample1.py  sample2.py
src/sample/: __main__.py  parser.py
tests/: test_parser.py  test_sample1.py
tests/sample/: test__main__.py  test_app.py  test_parser.py  test_sample1.py
