[tool.poetry]
name = "template-engine"
version = "0.1.0"
description = "template engine"
authors = ["Ike Tohru <ike.tohru@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.6"
sly = "^0.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-xdist = "^2.1.0"
mypy = "^0.790"
xenon = "^0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
