[tool.poetry]
name = "sample"
version = "0.0.1"
description = "python project template"
authors = ["Ike Tohru <ike.tohru@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.6"
sly = "^0.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-xdist = "^2.1.0"
mypy = "^0.790"
radon = "^4.3.2"
xenon = "^0.7.1"
taskipy = "^1.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.taskipy.tasks]
format = { cmd = "task flake8", help = "format code" }
flake8 = "flake8 --max-line-length=120 sample"
mypy = "mypy --strict sample"
